refactor: seguridad de rutas locales